--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color:black;
+    background-color:var(--blackpure);
     color: var(--text-color);
     padding: 60px 0 50px;
     margin-top: auto;
@@ -33,7 +33,6 @@
     color: var(--white);
     text-align: center;
     text-transform: none;
-
     p + p {
         margin-top: 1rem;
     }
