--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,129 +1,92 @@
 .header {
-    position: relative;
-    justify-content: center;
-    display: inline-flex;
-    align-items: center;
-    flex-wrap: wrap;
-    column-gap: 190px;
+  position: relative;
+  justify-content: center;
+  display: inline-flex;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 190px;
+  padding: 0 20px;
 
-    min-height: 895px;
-    margin-top: -100px;
+  min-height: 895px;
+  margin-top: -100px;
 
+  @media (max-width: 960px) {
+    row-gap: 50px;
+    padding-top: 100px;
+    min-height: 590px;
+  }
 
-    
-    @media (max-width: 960px) {
-        row-gap: 50px;
-        padding-top: 100px;
-        min-height: 590px;
-    }
-
-    @media (max-width: 620px) {
-        min-height: 100vh;
-    }
+  @media (max-width: 620px) {
+    min-height: 100vh;
+    padding: 0 10px;
+  }
 }
 
 .video-bg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
-
 
 .header__wrapper-headline {
-    position: relative;
-    color: var(--header-text);
+  position: relative;
+  color: var(--header-text);
 
-    em {
-        font-style: normal;
-        color: var(--accent2);
-    }
+  em {
+    font-style: normal;
+    color: var(--accent2);
+  }
 
-    span {
-        color: var(--accent);
-    }
+  span {
+    color: var(--accent);
+  }
 
-    @media (max-width: 1200px) {
-        text-align: center;
-    }
-
-
-    &__title {
-            @include custom-heading($font-hanson, $font-weight-bold, var(--font-size-h1), 1.1, 10px);
-
-            @include responsive-font-size(960px, 4.2rem);
-            @include responsive-font-size(620px, 2.5rem);
-        }
-
-    &__skills {
-        @include custom-heading($font-hanson, $font-weight-bold, var(--font-size-h1), 1.1, 30px);
-        
-        @include responsive-font-size(960px, 4.2rem);
-        @include responsive-font-size(620px, 2.5rem);
-
-        height: 140px;
-        overflow: hidden;
-
-        @media (max-width: 620px) {
-            height: 80px;
-        }
-        
-        span {
-            position: relative;
-            animation: animation 20s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
-            animation-delay: 0.5s;
-        }
-    }
-
-    p {
-        font-size: 0.8rem;
-        line-height: 1.5;
-        margin-bottom: 30px;
-        letter-spacing: 0.5px;
-    }
+  p {
+    font-size: 0.8rem;
+    line-height: 1.5;
+    margin-bottom: 30px;
+    letter-spacing: 0.5px;
+  }
+  @media (max-width: 1200px) {
+    text-align: center;
+  }
 }
 
+.header__wrapper-headline__title,
+.header__wrapper-headline__skills {
+  @include custom-heading(
+    var(--font-hanson),
+    var(--font-weight-bold),
+    var(--font-size-title-headline),
+    1.1
+  );
 
-
-@keyframes animation {
-    0%, 100% {
-        top: 0;
-    }
-    20% {
-        top: 0;
-    }
-    25% {
-        top: var(--header-top-size-1);
-    }
-    45% {
-        top: var(--header-top-size-1);
-    }
-    50% {
-        top: 0;
-    }
-    70% {
-        top: 0;
-    }
-    75% {
-        top: var(--header-top-size-1);
-    }
-    95% {
-        top: var(--header-top-size-1);
-    } 
-
-    
+  @include responsive-font-size(960px, 4.2rem);
+  @include responsive-font-size(620px, 2.5rem);
+}
+.header__wrapper-headline__title {
+  margin-bottom: 10px;
+}
+.header__wrapper-headline__skills {
+  height: 140px;
+  overflow: hidden;
+  margin-bottom: 30px;
+  span {
+    position: relative;
+    animation: animation 15s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+  }
+  @media (max-width: 620px) {
+    height: 80px;
+  }
 }
 
 .header__wrapper__skills-img {
-    @media (max-width: 1200px) {
-        display: none;
-    }
+  @media (max-width: 1200px) {
+    display: none;
+  }
 }
-
-
-
-
