--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ a {
 
 .title-2 {
   font-size: var(--font-size-h2);
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 @media (max-width: 620px) {
   .title-2 {
@@ -695,15 +695,6 @@ form textarea:active {
   margin-bottom: 20px;
   color: var(--text-color);
 }
-.about-text h2 {
-  font-size: var(--font-size-h2);
-  font-family: var(--font-hanson);
-  margin-bottom: 30px;
-  color: var(--title-color);
-}
-.about-text h2 em {
-  font-style: normal;
-}
 .about-text span {
   color: var(--accent2);
   text-decoration: underline;
@@ -726,17 +717,12 @@ form textarea:active {
 /* Capabilities */
 h3 {
   text-align: start;
-  font-size: var(--font-size-h2);
-  color: var(--white);
-  font-family: var(--font-hanson);
-  margin-bottom: 30px;
 }
 
 .capabilities {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  text-align: center;
   -moz-column-gap: 20px;
        column-gap: 20px;
 }
@@ -749,7 +735,6 @@ h3 {
 }
 
 section {
-  border-radius: 5px;
   width: 100%;
   margin: 40px 0;
 }
@@ -761,18 +746,10 @@ section {
   margin-top: 10px;
 }
 
-dl {
-  margin: 0;
-  padding: 0;
-}
-
 dt {
   font-family: var(--font-founders);
   font-size: var(--font-size-text-big);
-  color: var(--text-color);
   text-transform: none;
-  font-weight: bold;
-  margin-right: 30px;
 }
 
 dd {
@@ -794,31 +771,27 @@ dd {
   margin: 0 5px 0 0;
 }
 
-.level .active {
+.active {
   background-color: var(--accent);
 }
 
-.level .inactive {
+.inactive {
   background-color: var(--grey);
 }
 
 .level-description {
   padding-right: 8px;
-  font-style: var(--font-family);
   font-size: 0.9rem;
-  font-weight: var(--font-weight-regular);
   text-transform: none;
 }
 
 @media screen and (max-width: 960px) {
   .capabilities {
+    justify-content: center;
     padding: 10px;
   }
 }
 @media screen and (max-width: 620px) {
-  h3 {
-    font-size: 1.2rem;
-  }
   .capabilities {
     justify-content: center;
   }
