--- a/scss/blocks/other-pages/_about_me.scss
+++ b/scss/blocks/other-pages/_about_me.scss
@@ -22,17 +22,6 @@
     color: var(--text-color);
   }
 
-  h2 {
-    font-size: var(--font-size-h2);
-    font-family: var(--font-hanson);
-    margin-bottom: 30px;
-    color: var(--title-color);
-
-    em {
-      font-style: normal;
-    }
-  }
-
   span {
     color: var(--accent2);
     text-decoration: underline;
@@ -58,17 +47,12 @@
 /* Capabilities */
 h3 {
   text-align: start;
-  font-size: var(--font-size-h2);
-  color: var(--white);
-  font-family: var(--font-hanson);
-  margin-bottom: 30px;
 }
 
 .capabilities {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  text-align: center;
   column-gap: 20px;
 }
 
@@ -80,7 +64,6 @@ h3 {
 }
 
 section {
-  border-radius: 5px;
   width: 100%;
   margin: 40px 0;
 }
@@ -92,18 +75,10 @@ section {
   margin-top: 10px;
 }
 
-dl {
-  margin: 0;
-  padding: 0;
-}
-
 dt {
   font-family: var(--font-founders);
   font-size: var(--font-size-text-big);
-  color: var(--text-color);
   text-transform: none;
-  font-weight: bold;
-  margin-right: 30px;
 }
 
 dd {
@@ -125,32 +100,28 @@ dd {
   margin: 0 5px 0 0;
 }
 
-.level .active {
+.active {
   background-color: var(--accent);
 }
 
-.level .inactive {
+.inactive {
   background-color: var(--grey);
 }
 
 .level-description {
   padding-right: 8px;
-  font-style: var(--font-family);
   font-size: 0.9rem;
-  font-weight: var(--font-weight-regular);
   text-transform: none;
 }
 
 @media screen and (max-width: 960px) {
   .capabilities {
+    justify-content: center;
     padding: 10px;
   }
 }
 
 @media screen and (max-width: 620px) {
-  h3 {
-    font-size: 1.2rem;
-  }
   .capabilities {
     justify-content: center;
   }
