--- a/scss/components/_marquee.scss
+++ b/scss/components/_marquee.scss
@@ -32,7 +32,7 @@
   align-items: center;
   row-gap: 10px;
 
-  margin-bottom: 100px;
+  margin-bottom: 50apx;
 
   @media (max-width: 620px) {
     row-gap: 20px;
