--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ a {
   flex-direction: column;
   align-items: center;
   row-gap: 10px;
-  margin-bottom: 100px;
+  margin-bottom: 50apx;
 }
 @media (max-width: 620px) {
   .marquee-container {
@@ -676,7 +676,7 @@ form textarea:active {
   justify-content: space-between;
   -moz-column-gap: 50px;
        column-gap: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 200px;
 }
 @media (max-width: 1200px) {
   .about-wrapper {
