--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -24,6 +24,7 @@
   --font-size-h1: 3.6rem;
   --font-size-h2: 2.6rem;
   --font-size-h3: 1.8rem;
+  --font-size-h4: 1.4rem;
   --font-size-text-big: 1.2rem;
   --font-size-text-normal: 1rem;
   --font-size-text-small: 0.9rem;
