--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -59,19 +59,19 @@ a {
     font-size: var(--font-size-h2);
     padding: 0 20px;
   }
-
-  @media (max-width: 620px) {
-    margin-bottom: 30px;
-    font-size: var(--font-size-h3);
-  }
 }
 
 .title-2 {
   font-size: var(--font-size-h2);
   margin-bottom: 30px;
 
-  @media (max-width: 620px) {
+  @media (max-width: 960px) {
     font-size: var(--font-size-h3);
+    padding: 0 20px;
+  }
+
+  @media (max-width: 620px) {
+    font-size: var(--font-size-h4);
   }
 }
 
@@ -79,7 +79,7 @@ a {
   font-size: var(--font-size-h3);
   margin-bottom: 20px;
 
-  @media (max-width: 620px) {
+  @media (max-width: 960px) {
     font-size: var(--font-size-h4);
   }
 }
@@ -87,8 +87,4 @@ a {
 .title-4 {
   font-size: var(--font-size-h4);
   margin-bottom: 20px;
-
-  @media (max-width: 620px) {
-    font-size: var(--font-size-h4);
-  }
 }
