--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -102,6 +102,10 @@
     margin: 16px 0;
   }
 
+  .nav-list__item:last-of-type {
+    margin-top: -40px;
+  }
+
   .nav-list.active {
     left: 0;
   }
