--- a/scss/pages/_datenschutz.scss
+++ b/scss/pages/_datenschutz.scss
@@ -28,8 +28,14 @@
   }
 }
 
-.datenschutz .collect_informations,
-.datenschutz .use_informations {
+.datenschutz .title-1 {
+  padding: 0;
+  text-align: left;
+  overflow-wrap: break-word;
+}
+
+.datenschutz #collect_informations,
+.datenschutz #use_informations {
   margin-bottom: 10px;
 }
 
